--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ more-itertools==7.2.0
 mtnmomo==3.0.1
 phonenumbers==8.10.20
 pytz==2019.3
+redis==3.3.11
 requests==2.21.0
 screen==1.0.1
 sqlparse==0.3.0
